name change title
Signed-off-by: DataSpot42 <stevelookingforward@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>GC ChatBot</title>
+    <script> window.danteEmbed = "https://chat.dante-ai.com/embed?kb_id=5dbf3ee4-b801-453a-97e8-4e630752c8e5&token=7eb2160c-f6b9-4fe9-997b-8871f271c3b5&modeltype=gpt-4-turbo&mode=undefined&bubble=true&image=https://dante-chatbot-pictures.s3.amazonaws.com/5dbf3ee4-b801-453a-97e8-4e630752c8e5/The_Growth_Company.jpg&bubbleopen=false" </script> <script src="https://chat.dante-ai.com/bubble-embed.js"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
